--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -110,6 +110,7 @@
     <string name="sd_card">SD カード</string>
     <string name="root">ルート</string>
     <string name="wrong_root_selected">フォルダーの選択が正しくありません。SD カードを選択してください</string>
+    <string name="sd_card_otg_same">SD card and OTG device paths cannot be the same</string>
 
     <!-- File properties -->
     <string name="properties">プロパティ</string>
