--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -110,6 +110,7 @@
     <string name="sd_card">SD kortelë</string>
     <string name="root">Pagrindinë</string>
     <string name="wrong_root_selected">Pasirinktas neteisingas aplankas, pasirinkite pagrindiná SD kortelës aplankà</string>
+    <string name="sd_card_otg_same">SD card and OTG device paths cannot be the same</string>
 
     <!-- File properties -->
     <string name="properties">Savybës</string>
