--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -111,6 +111,7 @@
     <string name="sd_card">SD karta</string>
     <string name="root">Koreňový priečinok</string>
     <string name="wrong_root_selected">Bol zvolený nesprávny koreňový priečinok, prosím zvoľte SD kartu</string>
+    <string name="sd_card_otg_same">Cesta k SD karte a OTG zariadeniu nesmie byť rovnaká</string>
 
     <!-- File properties -->
     <string name="properties">Vlastnosti</string>
