--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -308,6 +308,8 @@
     <string name="faq_2_text_commons">Oczywiście. Możesz powiedzieć światu o naszych aplikacjach, podzielić się opinią i oceną w Sklepie Google Play, lub też wspomóc tłumaczenie aplikacji na nowe języki (bądź poprawić już istniejące tłumaczenia). Instrukcję znajdziesz pod adresem https://github.com/SimpleMobileTools/General-Discussion . Możesz też napisać do nas na adres hello@simplemobiletools.com , jeśli potrzebujesz pomocy.</string>
     <string name="faq_3_title_commons">Usunąłem / usunęłam jakieś pliki przez przypadek. Mogę je jakoś odzyskać?</string>
     <string name="faq_3_text_commons">Niestety nie. Pliki są usuwane zaraz po kliknięciu w oknie potwierdzającym. System Amdroid nie ma wbudowanego kosza (są osobne od tego aplikacje, jednakże upewnij się kilka razy, zanim cokolwiek usuniesz, gdyż takowe aplikacje nie gwarantują odzyskania pliku w nienaruszonym stanie).</string>
+    <string name="faq_4_title_commons">I don\'t like the widget colors, can I change them?</string>
+    <string name="faq_4_text_commons">Yep, as you drag a widget on your home screen a widget config screen appears. You will see colored squares at the bottom left corner, just press them to pick a new color. You can use the slider for adjusting the alpha too.</string>
 
     <!-- License -->
     <string name="notice">Aplikacja korzysta z następujących bibliotek innych firm:</string>
