adding a new string for Notes

--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -14,6 +14,7 @@
     <string name="always">Zawsze</string>
     <string name="never">Nigdy</string>
     <string name="details">Szczegóły</string>
+    <string name="notes">Notatnik</string>
 
     <!-- Search -->
     <string name="search">Szukaj</string>
