--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -14,6 +14,7 @@
     <string name="always">Altid</string>
     <string name="never">Aldrig</string>
     <string name="details">Detaljer</string>
+    <string name="notes">Noter</string>
 
     <!-- Search -->
     <string name="search">Søg</string>
