--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -14,6 +14,7 @@
     <string name="always">Immer</string>
     <string name="never">Nie</string>
     <string name="details">Details</string>
+    <string name="notes">Notizen</string>
 
     <!-- Search -->
     <string name="search">Suchen</string>
