--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -14,6 +14,7 @@
     <string name="always">Siempre</string>
     <string name="never">Nunca</string>
     <string name="details">Detalles</string>
+    <string name="notes">Notas</string>
 
     <!-- Search -->
     <string name="search">Buscar</string>
