--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -14,6 +14,7 @@
     <string name="always">Toujours</string>
     <string name="never">Jamais</string>
     <string name="details">Détails</string>
+    <string name="notes">Notes</string>
 
     <!-- Search -->
     <string name="search">Recherche</string>
