--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -14,6 +14,7 @@
     <string name="always">Always</string>
     <string name="never">Never</string>
     <string name="details">Details</string>
+    <string name="notes">Jegyzetek</string>
 
     <!-- Search -->
     <string name="search">Search</string>
