--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -14,6 +14,7 @@
     <string name="always">Selalu</string>
     <string name="never">Tidak Pernah</string>
     <string name="details">Details</string>
+    <string name="notes">Notes</string>
 
     <!-- Search -->
     <string name="search">Cari</string>
