--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -14,6 +14,7 @@
     <string name="always">Sempre</string>
     <string name="never">Mai</string>
     <string name="details">Details</string>
+    <string name="notes">Notes</string>
 
     <!-- Search -->
     <string name="search">Cerca</string>
