--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -14,6 +14,7 @@
     <string name="always">Alltid</string>
     <string name="never">Aldri</string>
     <string name="details">Detaljer</string>
+    <string name="notes">Notes</string>
 
     <!-- Search -->
     <string name="search">Søk</string>
