--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -14,6 +14,7 @@
     <string name="always">Altijd</string>
     <string name="never">Nooit</string>
     <string name="details">Details</string>
+    <string name="notes">Notities</string>
 
     <!-- Search -->
     <string name="search">Zoeken</string>
