--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -14,6 +14,7 @@
     <string name="always">Всегда</string>
     <string name="never">Никогда</string>
     <string name="details">Подробности</string>
+    <string name="notes">Заметки</string>
 
     <!-- Search -->
     <string name="search">Поиск</string>
