--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -14,6 +14,7 @@
     <string name="always">Vždy</string>
     <string name="never">Nikdy</string>
     <string name="details">Detaily</string>
+    <string name="notes">Poznámky</string>
 
     <!-- Search -->
     <string name="search">Hľadať</string>
