--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -14,6 +14,7 @@
     <string name="always">总是</string>
     <string name="never">从不</string>
     <string name="details">详细</string>
+    <string name="notes">笔记</string>
 
     <!-- Search -->
     <string name="search">搜索</string>
