--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -14,6 +14,7 @@
     <string name="always">總是</string>
     <string name="never">從不</string>
     <string name="details">詳細資訊</string>
+    <string name="notes">Notes</string>
 
     <!-- Search -->
     <string name="search">搜尋</string>
