--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -44,7 +44,7 @@
     <string name="filename_cannot_be_empty">El nom de l\'arxiu no pot ser buit</string>
     <string name="filename_invalid_characters">El nom de l\'arxiu conté caràcters no vàlids</string>
     <string name="extension_cannot_be_empty">La extensió no pot estar buida</string>
-    <string name="source_file_doesnt_exist">Source file %s doesn\'t exist</string>
+    <string name="source_file_doesnt_exist">El fitxer %s no existeix</string>
 
     <!-- Copy / Move -->
     <string name="copy">Copiar</string>
@@ -111,7 +111,7 @@
     <string name="sd_card">Targeta SD</string>
     <string name="root">Arrel /</string>
     <string name="wrong_root_selected">Has seleccionat la carpeta incorrecta. Selecciona la carpeta arrel de la targeta SD</string>
-    <string name="sd_card_otg_same">SD card and OTG device paths cannot be the same</string>
+    <string name="sd_card_otg_same">La targeta SD i el dispositiu OTG no poden ser el mateix</string>
 
     <!-- File properties -->
     <string name="properties">Propietats</string>
@@ -297,17 +297,17 @@
     <string name="purchase">Comprar</string>
 
     <!-- FAQ -->
-    <string name="frequently_asked_questions">Frequently asked questions</string>
-    <string name="faq_1_title_commons">How come I don\'t see this apps widget on the list of widgets?</string>
-    <string name="faq_1_text_commons">It is most likely because you moved the app on an SD card. There is an Android system limitation which hides the given app widgets
-        in that case. The only solution is to move the app back onto the Internal Storage via your device settings.</string>
-    <string name="faq_2_title_commons">I want to support you, but I cannot donate money. Is there anything else I can do?</string>
-    <string name="faq_2_text_commons">Yes, of course. You can spread the word about the apps or give good feedback and ratings. You can also help by translating the apps in a new language, or just update some existing translations.
-        You can find the guide at https://github.com/SimpleMobileTools/General-Discussion , or just shoot me a message at hello@simplemobiletools.com if you need help.</string>
-    <string name="faq_3_title_commons">I deleted some files by mistake, how can I recover them?</string>
-    <string name="faq_3_text_commons">Sadly, you cannot. Files are deleted instantly after the confirmation dialog, there is no trashbin available.</string>
-    <string name="faq_4_title_commons">I don\'t like the widget colors, can I change them?</string>
-    <string name="faq_4_text_commons">Yep, as you drag a widget on your home screen a widget config screen appears. You will see colored squares at the bottom left corner, just press them to pick a new color. You can use the slider for adjusting the alpha too.</string>
+    <string name="frequently_asked_questions">Preguntes frequents</string>
+    <string name="faq_1_title_commons">Com és que no veig aquest widget a la llista de widgets?</string>
+    <string name="faq_1_text_commons">Probablement, perquè heu mogut l'aplicació en una targeta SD. Hi ha una limitació del sistema d'Android que oculta els widgets de l'aplicació determinada
+        en aquest cas. L'única solució és moure l'aplicació a l'emmagatzematge intern a través de la configuració del dispositiu.</string>
+    <string name="faq_2_title_commons">Vull donar-vos suport, però no puc donar diners. Hi ha alguna cosa més que pugui fer?</string>
+    <string name="faq_2_text_commons">Sí, per suposat. Podeu donar a conneixer les aplicacions o donar-ne una bona opinió i valoracions. També podeu ajudar per traduir les aplicacions en un nou idioma o, simplement, actualitzar algunes de les traduccions existents.
+        Podeu trobar la guia a https://github.com/SimpleMobileTools/General-Discussion, o simplement enviar-me un missatge a hello@simplemobiletools.com si necessiteu ajuda.</string>
+    <string name="faq_3_title_commons">He esborrat alguns fitxers per error, com puc recuperar-los?</string>
+    <string name="faq_3_text_commons">Malauradament, no pots fer-ho. Els fitxers s'eliminen a l'instant després del diàleg de confirmació, no hi ha una paperera disponible.</string>
+    <string name="faq_4_title_commons">No m\'agraden els colors del widget, puc canviar-los?</string>
+    <string name="faq_4_text_commons">Sí, mentre arrossegueu un widget a la vostra pantalla d\'inici, apareixerà una pantalla de configuració de widgets. Veureu quadrats de colors a l\'extrem inferior esquerre, només cal prémer-los per seleccionar un color nou. També podeu utilitzar el control lliscant per ajustar l\'alfa.</string>
 
     <!-- License -->
     <string name="notice">Aquesta aplicació fa servir les següents biblioteques de tercers que ens faciliten la feina. Gràcies.</string>
