--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -299,13 +299,13 @@
     <!-- FAQ -->
     <string name="frequently_asked_questions">Preguntes frequents</string>
     <string name="faq_1_title_commons">Com és que no veig aquest widget a la llista de widgets?</string>
-    <string name="faq_1_text_commons">Probablement, perquè heu mogut l'aplicació en una targeta SD. Hi ha una limitació del sistema d'Android que oculta els widgets de l'aplicació determinada
-        en aquest cas. L'única solució és moure l'aplicació a l'emmagatzematge intern a través de la configuració del dispositiu.</string>
+    <string name="faq_1_text_commons">Probablement, perquè heu mogut l\'aplicació en una targeta SD. Hi ha una limitació del sistema d\'Android que oculta els widgets de l\'aplicació determinada
+        en aquest cas. L\'única solució és moure l\'aplicació a l\'emmagatzematge intern a través de la configuració del dispositiu.</string>
     <string name="faq_2_title_commons">Vull donar-vos suport, però no puc donar diners. Hi ha alguna cosa més que pugui fer?</string>
     <string name="faq_2_text_commons">Sí, per suposat. Podeu donar a conneixer les aplicacions o donar-ne una bona opinió i valoracions. També podeu ajudar per traduir les aplicacions en un nou idioma o, simplement, actualitzar algunes de les traduccions existents.
         Podeu trobar la guia a https://github.com/SimpleMobileTools/General-Discussion, o simplement enviar-me un missatge a hello@simplemobiletools.com si necessiteu ajuda.</string>
     <string name="faq_3_title_commons">He esborrat alguns fitxers per error, com puc recuperar-los?</string>
-    <string name="faq_3_text_commons">Malauradament, no pots fer-ho. Els fitxers s'eliminen a l'instant després del diàleg de confirmació, no hi ha una paperera disponible.</string>
+    <string name="faq_3_text_commons">Malauradament, no pots fer-ho. Els fitxers s\'eliminen a l\'instant després del diàleg de confirmació, no hi ha una paperera disponible.</string>
     <string name="faq_4_title_commons">No m\'agraden els colors del widget, puc canviar-los?</string>
     <string name="faq_4_text_commons">Sí, mentre arrossegueu un widget a la vostra pantalla d\'inici, apareixerà una pantalla de configuració de widgets. Veureu quadrats de colors a l\'extrem inferior esquerre, només cal prémer-los per seleccionar un color nou. També podeu utilitzar el control lliscant per ajustar l\'alfa.</string>
 
