--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -43,6 +43,7 @@
     <string name="renaming_folder">Renaming folder</string>
     <string name="filename_cannot_be_empty">Filename cannot be empty</string>
     <string name="filename_invalid_characters">Filename contains invalid characters</string>
+    <string name="filename_invalid_characters_placeholder">Filename %s contains invalid characters</string>
     <string name="extension_cannot_be_empty">Extension cannot be empty</string>
     <string name="source_file_doesnt_exist">Source file %s doesn\'t exist</string>
 
